--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "bin": {
-    "zeropse-cli": "./index.js"
+    "zeropse": "./index.js"
   },
   "type": "module",
   "keywords": [
@@ -18,13 +18,10 @@
   "description": "A CLI tool to create a new project with Vite and React or Next.js",
   "dependencies": {
     "chalk": "^5.4.1",
-    "fs-extra": "^11.3.0",
-    "ora": "^8.2.0",
-    "prompts": "^2.4.2"
+    "inquirer": "^12.4.1"
   },
   "files": [
     "index.js",
-    "template-vite",
-    "template-vite-tailwind"
+    "bin/files"
   ]
 }
